# juliogarbers.github.io

./: .gitignore  .nojekyll  .quartoignore  CNAME  README.md  _quarto.yml  blog.html  blog.qmd  cv.html  cv.qmd  dashboard.html  data.html  data.qmd  experiments.html  experiments.qmd  index.html  index.qmd  listings.json  policy.html  policy.qmd  pyproject.toml  research.html  research.qmd  robots.txt  search.json  sitemap.xml  styles.css
ai-dashboard/: files.json  index.html
ai-dashboard/app/: app.py
ai-dashboard/app/.streamlit/: config.toml
ai-dashboard/app/lib/: aggregations.py  branding.py  data.py  filters.py  nace.py  stats.py  (+1 more)
experiments/: index.html
experiments/exp_1_attention_accuracy/: GOOGLE_SHEETS_SETUP.html  GOOGLE_SHEETS_SETUP.md  README.md  index.html
experiments/exp_2_memory/: GOOGLE_SHEETS_SETUP.html  GOOGLE_SHEETS_SETUP.md  README.md  index.html
experiments/exp_3_subjective_traits/: index.html
experiments/images/: README.md
posts/: _share.qmd
posts/bert_topic_websites_lux/: index.html  index.qmd  stats.json
posts/language_sector_lux/: index.html  index.qmd  stats.json
posts/web_trackers_lux/: index.html  index.qmd  stats.json
posts/website_languages_lux/: index.html  index.qmd
site_libs/bootstrap/: bootstrap-098407b504c0d6642450abd61cf906b9.min.css  bootstrap-30bc6a39621e5e22ce1b3edd7c5c7635.min.css  bootstrap-37d8a427dad56573d203ae086516c6ae.min.css  bootstrap-7a3aec57ca8ba058e5ee33bf22308737.min.css  bootstrap-b185dbe725ca6fd0075e1596753d772b.min.css  bootstrap-d242a2845c26d188bde34363ee048d42.min.css
styles/: custom.scss
(+17 files in other folders)
